--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,9 +1,8 @@
 ---
 import { getLangFromUrl, useTranslations } from "../i18n/utils";
-import Layout from "../layouts/Layout.astro";
 
 const lang = getLangFromUrl(Astro.url);
-const t = useTranslations(lang);
+const _t = useTranslations(lang);
 ---
 
 <Layout title={t("404.title")} description={t("404.description")}>
