--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,8 @@
 ---
 import { getLangFromUrl, useTranslations } from "../i18n/utils";
-import LanguagePicker from "./LanguagePicker.astro";
 
 const lang = getLangFromUrl(Astro.url);
-const t = useTranslations(lang);
+const _t = useTranslations(lang);
 ---
 
 <nav
