--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,13 +1,10 @@
 ---
-import SocialLinks from "../components/SocialLinks";
-import Layout from "../layouts/Layout.astro";
-
 const gravatarHash = "60eb98ab51a815a519feeca028e08573"; // IchimaruGin728
 
 import { getLangFromUrl, useTranslations } from "../i18n/utils";
 
 const lang = getLangFromUrl(Astro.url);
-const t = useTranslations(lang);
+const _t = useTranslations(lang);
 
 let socialLinks: {
 	label: string;
