--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,18 +1,17 @@
 ---
 import { desc, lte } from "drizzle-orm";
 import { posts } from "../../../db/schema";
-import Layout from "../../layouts/Layout.astro";
 import { getDb } from "../../lib/db";
 
 // Access Cloudflare bindings from locals
 const { env } = Astro.locals.runtime;
 
-let allPosts: (typeof posts.$inferSelect)[] = [];
-let error = null;
+let _allPosts: (typeof posts.$inferSelect)[] = [];
+let _error = null;
 
 try {
 	const db = getDb(env);
-	allPosts = await db
+	_allPosts = await db
 		.select()
 		.from(posts)
 		.where(lte(posts.publishedAt, Date.now()))
@@ -20,7 +19,7 @@ try {
 		.all();
 } catch (e: any) {
 	console.error("Failed to fetch posts:", e);
-	error = e.message;
+	_error = e.message;
 }
 ---
 
