--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,10 @@
 import { desc, lte } from "drizzle-orm";
 import { posts } from "../../db/schema";
 import { getLangFromUrl, useTranslations } from "../i18n/utils";
-import Layout from "../layouts/Layout.astro";
 import { getDb } from "../lib/db";
 
 const lang = getLangFromUrl(Astro.url);
-const t = useTranslations(lang);
+const _t = useTranslations(lang);
 
 // Access Cloudflare bindings from locals
 const { env } = Astro.locals.runtime;
@@ -22,7 +21,7 @@ try {
 }
 
 // Fetch recent posts with caching
-let recentPosts: (typeof posts.$inferSelect)[] = [];
+let _recentPosts: (typeof posts.$inferSelect)[] = [];
 const CACHE_KEY = "home_recent_posts_en";
 const CACHE_TTL = 300; // 5 minutes
 
@@ -38,9 +37,9 @@ try {
 	};
 
 	if (cache) {
-		recentPosts = await cache.getOrSet(CACHE_KEY, fetchPosts, CACHE_TTL);
+		_recentPosts = await cache.getOrSet(CACHE_KEY, fetchPosts, CACHE_TTL);
 	} else {
-		recentPosts = await fetchPosts();
+		_recentPosts = await fetchPosts();
 	}
 } catch (e) {
 	console.error("Failed to fetch posts:", e);
