--- a/src/pages/login/index.astro
+++ b/src/pages/login/index.astro
@@ -1,9 +1,8 @@
 ---
 import { useTranslations } from "../../i18n/utils";
-import Layout from "../../layouts/Layout.astro";
 
 const lang = "en-SG";
-const t = useTranslations(lang);
+const _t = useTranslations(lang);
 ---
 
 <Layout title={`${t("nav.login")} - ${t("hero.title")}`}>
