--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,7 @@ import "@fontsource-variable/inter";
 import "@fontsource-variable/jetbrains-mono";
 import "@fontsource-variable/outfit";
 
+// biome-ignore lint/correctness/noUnusedVariables: Used in template
 const lang = getLangFromUrl(Astro.url);
 
 interface Props {
