--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,9 @@
 ---
 import { getLangFromUrl, useTranslations } from "../i18n/utils";
 
+// biome-ignore lint/correctness/noUnusedVariables: Used in template
 const lang = getLangFromUrl(Astro.url);
+// biome-ignore lint/correctness/noUnusedVariables: Used in template
 const t = useTranslations(lang);
 ---
 
