--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,10 @@
 ---
+import LanguagePicker from "./LanguagePicker.astro";
 import { getLangFromUrl, useTranslations } from "../i18n/utils";
 
+// biome-ignore lint/correctness/noUnusedVariables: Used in template
 const lang = getLangFromUrl(Astro.url);
+// biome-ignore lint/correctness/noUnusedVariables: Used in template
 const t = useTranslations(lang);
 ---
 
