--- a/src/components/LanguagePicker.astro
+++ b/src/components/LanguagePicker.astro
@@ -2,7 +2,7 @@
 import { getLangFromUrl } from "../i18n/utils";
 
 const url = Astro.url;
-const _currentLang = getLangFromUrl(url);
+const currentLang = getLangFromUrl(url);
 
 // Helper to remove current lang from slug if it exists to clean up logic
 // But simpler approach: just map key to URL
