--- a/src/pages/zh/about.astro
+++ b/src/pages/zh/about.astro
@@ -2,7 +2,8 @@
 import { getLangFromUrl, useTranslations } from "../../i18n/utils";
 
 const lang = getLangFromUrl(Astro.url);
-const _t = useTranslations(lang);
+// biome-ignore lint/correctness/noUnusedVariables: Used in template
+const t = useTranslations(lang);
 ---
 
 <Layout title={`${t("nav.about")} - ${t("hero.title")}`}>
