--- a/src/pages/zh/login/index.astro
+++ b/src/pages/zh/login/index.astro
@@ -1,8 +1,10 @@
 ---
-import { useTranslations } from "../../../i18n/utils";
+import Layout from "../../../layouts/Layout.astro";
+import { getLangFromUrl, useTranslations } from "../../../i18n/utils";
 
-const lang = "zh-SG";
-const _t = useTranslations(lang);
+const lang = getLangFromUrl(Astro.url);
+// biome-ignore lint/correctness/noUnusedVariables: Used in template
+const t = useTranslations(lang);
 ---
 
 <Layout title={`${t("nav.login")} - ${t("hero.title")}`}>
