--- a/src/components/LanguagePicker.astro
+++ b/src/components/LanguagePicker.astro
@@ -1,5 +1,6 @@
 ---
-import { getLangFromUrl } from "../i18n/utils";
+import { languages } from "../i18n/ui";
+import { getLangFromUrl, getRouteFromUrl } from "../i18n/utils";
 
 const url = Astro.url;
 const currentLang = getLangFromUrl(url);
