--- a/src/pages/zh/about.astro
+++ b/src/pages/zh/about.astro
@@ -1,4 +1,6 @@
 ---
+import Layout from "../../layouts/Layout.astro";
+import SocialLinks from "../../components/SocialLinks.tsx";
 import { getLangFromUrl, useTranslations } from "../../i18n/utils";
 
 const lang = getLangFromUrl(Astro.url);
