--- a/src/pages/login/index.astro
+++ b/src/pages/login/index.astro
@@ -1,5 +1,6 @@
 ---
-import { useTranslations } from "../../i18n/utils";
+import Layout from "../../layouts/Layout.astro";
+import { getLangFromUrl, useTranslations } from "../../i18n/utils";
 
 const lang = getLangFromUrl(Astro.url);
 // biome-ignore lint/correctness/noUnusedVariables: Used in template
