--- a/src/pages/zh/profile.astro
+++ b/src/pages/zh/profile.astro
@@ -1,4 +1,5 @@
 ---
+import Layout from "../../layouts/Layout.astro";
 import { useTranslations } from "../../i18n/utils";
 
 const lang = getLangFromUrl(Astro.url);
